# GLUCC

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  TODO.md  format_guard.hpp  is_insertable.hpp  nullable_function.hpp  optional_function.hpp  packer.hpp  unpacker.hpp
Tests/: .clang-tidy  CMakeLists.txt  test_format_guard.cpp  test_is_insertable.cpp  test_nullable_function.cpp  test_optional_function.cpp  test_packer.cpp  test_unpacker.cpp
Tests/build-fail/: CMakeLists.txt  nocompile.sh  optional_function_not_function.cpp  optional_function_not_function2.cpp  packer_long_insert.cpp  packer_no_inserter.cpp  packer_no_push_back.cpp  unpacker_int_array.cpp  unpacker_int_std_array.cpp  unpacker_long.cpp
docs/: README.md  annotated.html  classes.html  classglucc_1_1format__guard.html  dir_4fef79e7177ba769987a8da36c892c5f.html  files.html  format__guard_8hpp_source.html  functions.html  functions_func.html  hierarchy.html  index.html  md__l_i_c_e_n_s_e.html  nullable__function_8hpp.html  pages.html  structglucc_1_1nullable__function_3_01_ret_07_args_8_8_8_08_4-members.html  structglucc_1_1nullable__function_3_01_ret_07_args_8_8_8_08_4.html  structglucc_1_1nullable__function_3_01void_07_args_8_8_8_08_4-members.html
docs/doxygen/: annotated.html  classes.html  classglucc_1_1format__guard-members.html  classjames_1_1unpacker-members.html  classjames_1_1unpacker.html  classkerry_1_1packer-members.html  classkerry_1_1packer.html  files.html  format__guard_8hpp.html  functions.html  functions_func.html  hierarchy.html  index.html  is__insertable_8hpp.html  is__insertable_8hpp_source.html  nullable__function_8hpp_source.html  optional__function_8hpp.html  optional__function_8hpp_source.html  packer_8hpp.html  packer_8hpp_source.html  struct_g_l_u_c_c_1_1details_1_1helper.html  struct_g_l_u_c_c_1_1details_1_1helper_3_01_t_00_01_s_00_01std_1_1void__t_3_01decltype_07std_1_1d17a18cb3215e19abef6a192b631324e5.html  structglucc_1_1details_1_1helper.html  structglucc_1_1details_1_1helper_3_01_t_00_01_s_00_01std_1_1void__t_3_01decltype_07std_1_1declva2d118be559bc6d79d49647c57da699ae.html  structglucc_1_1is__insertable__into.html  structglucc_1_1is__insertable__into_3_01_t_00_01_s_00_01std_1_1void__t_3_01decltype_07std_1_1dec60f1d59155f95e1cfabdaa7c6d6e8e35.html  structglucc_1_1is__insertable__into_3_01_t_00_01_s_00_01std_1_1void__t_3_01decltype_07std_1_1dec6b161707ba1ef64877d9a5de8a899568.html  structglucc_1_1nullable__function.html  structglucc_1_1nullable__function_3_01void_07_args_8_8_8_08_4.html  structglucc_1_1optional__function.html  structglucc_1_1optional__function_3_01_ret_07_args_8_8_8_08_4-members.html  structglucc_1_1optional__function_3_01_ret_07_args_8_8_8_08_4.html  structglucc_1_1optional__function_3_01void_07_args_8_8_8_08_4-members.html  structglucc_1_1optional__function_3_01void_07_args_8_8_8_08_4.html  structkerry_1_1details_1_1helper.html  structkerry_1_1details_1_1helper_3_01_t_00_01_s_00_01std_1_1void__t_3_01decltype_07_s__func_3_0152ebf001003c857b86bf86357e7659d9.html  structkerry_1_1size__error.html  unpacker_8hpp.html  unpacker_8hpp_source.html
docs/doxygen/search/: all_0.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  files_0.js  files_1.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
docs/search/: all_2.js  searchdata.js
